# YouTubeSimpleDownloader

./: .gitignore  README.md  RELEASE_NOTES.md  build_exe.bat  build_inno_installer.ps1  build_signed_installer.ps1  pyproject.toml  requirements.txt  run_app.py
installer/: LICENSE.txt  README-INSTALLER.txt  YouTubeSimpleDownloader.iss
src/ytsimpledownloader/: __init__.py  app.py  downloader.py  paths.py
tests/: smoke_download.py
